feat: Add support for 'gcp' configuration

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
         "sourceType": "module"
     },
     "rules": {
+        "no-console":0,
         "indent": [
             "error",
             "tab"
