--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "aws-sdk": "^2.185.0",
     "bytes": "^3.0.0",
     "chalk": "^2.3.0",
+    "child-process-promise": "^2.2.1",
     "clipboardy": "^1.2.2",
     "colors": "^1.1.2",
     "commander": "^2.12.2",
