--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "fs-extra": "^5.0.0",
     "http": "0.0.0",
     "inquirer": "^5.0.0",
+    "load-json-file": "^4.0.0",
     "lodash": "^4.17.4",
     "mri": "^1.1.0",
     "ms": "^2.1.1",
